--- a/background/index.html
+++ b/background/index.html
@@ -55,7 +55,7 @@
                 <span>1 bath</span> <span>2 guests</span>
                 <span>1 bedroom</span>
                 <span>1 bed</span>
-                <span>1 bath</span>ㅎ
+                <span>1 bath</span>
               </dd>
             </div>
 
